Добавил переменные, изменил media-выражения, подправил БЭМ

--- a/source/css/FAQ.css
+++ b/source/css/FAQ.css
@@ -1,7 +1,7 @@
 .FAQ {
-  width: 375px;
-  margin: 0 auto;
-  margin-bottom: 169px; }
+  width: 320px;
+  margin-bottom: 169px;
+  margin: 0 auto; }
 
 .FAQ__abbr {
   color: #ED3A4E;
@@ -13,14 +13,12 @@
   margin-bottom: 16px; }
 
 .FAQ__title {
-  color: #333333;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -1px;
   margin-bottom: 15px; }
 
 .FAQ__description {
-  color: #333333;
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 46px; }
@@ -28,25 +26,27 @@
 .accordion {
   background-color: #fff;
   cursor: pointer;
-  padding: 18px;
+  padding: 18px 0;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 20px;
+  line-height: 30px;
   font-weight: bold;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
-  transition: 0.4s; }
+  transition: 0.4s;
+  position: relative; }
 
 .active, .accordion:hover {
   background-color: #ccc; }
 
 .accordion:after {
   content: '\002B';
+  position: absolute;
   font-weight: bold;
-  float: right;
+  right: 20px;
   margin-left: 5px; }
 
 .active:after {
@@ -61,10 +61,12 @@
   -o-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .FAQ {
     width: 570px;
     margin-bottom: 185px; }
+  .accordion {
+    padding-left: 18px; }
   .FAQ__title {
     font-size: 56px;
     line-height: 64px;
