--- a/source/css/download.css
+++ b/source/css/download.css
@@ -12,21 +12,18 @@
   margin-bottom: 16px; }
 
 .downloads__title {
-  color: #333333;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -2px;
   margin-bottom: 15px; }
 
 .downloads__description {
-  color: #333333;
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 16px; }
 
 .downloads__picture {
-  width: 329px;
-  margin: 0 auto; }
+  width: 100%; }
 
 .downloads__button {
   display: block;
@@ -46,7 +43,7 @@
     color: white;
     cursor: pointer; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .downloads {
     width: 1170px;
     margin-bottom: 154px; }
@@ -64,13 +61,12 @@
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between; }
-  .downloads__flex__item {
+  .downloads__flex-item {
     width: 450px;
     padding-top: 74px; }
   .downloads__small {
     margin-bottom: 18px; }
   .downloads__description {
-    color: #333333;
     font-size: 20px;
     line-height: 32px;
     margin-bottom: 34px; }
