--- a/source/css/features.css
+++ b/source/css/features.css
@@ -1,5 +1,5 @@
 .page-main {
-  width: 375px;
+  width: 320px;
   margin: 0 auto;
   padding-right: 5px;
   padding-left: 5px; }
@@ -32,12 +32,10 @@
   margin-bottom: 160px; }
 
 .page-main__picture {
-  width: 329px;
-  margin: 0 auto;
+  width: 100%;
   margin-bottom: 28px; }
 
 .features__description {
-  color: #333333;
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 16px; }
@@ -52,7 +50,6 @@
   margin-bottom: 16px; }
 
 .features__title {
-  color: #333333;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -2px;
@@ -89,9 +86,9 @@
   .features__item__container img {
     margin-right: 15px; }
 
-.features__item__description {
+.features__item-description {
   display: block;
-  width: 338px;
+  width: 100%;
   color: rgba(51, 51, 51, 0.5);
   font-size: 16px;
   line-height: 32px; }
@@ -99,7 +96,7 @@
 .features {
   margin-bottom: 97px; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .features {
     margin-bottom: 177px; }
   .page-main {
@@ -127,13 +124,12 @@
     margin-bottom: 34px; }
   .page-main__picture {
     width: 570px; }
-  .features__item__title {
-    color: #333333;
+  .features__item-title {
     font-size: 24px;
     line-height: 32px;
     font-weight: bold;
     vertical-align: center; }
-  .features__item__description {
+  .features__item-description {
     display: block;
     width: 338px;
     color: rgba(51, 51, 51, 0.5);
@@ -163,6 +159,6 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-bottom: 160px; }
-  .features__flex__elem {
+  .features__flex-item {
     width: 476px;
     padding-top: 45px; } }
