--- a/source/css/map.css
+++ b/source/css/map.css
@@ -12,19 +12,21 @@
   text-align: center; }
 
 .map__description {
-  color: #333333;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -2px;
   margin-bottom: 54px;
   text-align: center; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .map {
     width: 1170px; }
   .map__title {
     margin-bottom: 18px; }
   .map__description {
+    margin: 0 auto;
+    width: 400px;
     font-size: 56px;
     line-height: 64px;
-    letter-spacing: -2px; } }
+    letter-spacing: -2px;
+    margin-bottom: 53px; } }
