--- a/source/css/services.css
+++ b/source/css/services.css
@@ -4,8 +4,7 @@
   padding-right: 5px; }
 
 .services__picture {
-  margin: 0 auto;
-  width: 329px;
+  width: 100%;
   margin-bottom: 28px; }
 
 .services__small {
@@ -18,14 +17,12 @@
   margin-bottom: 16px; }
 
 .services__title {
-  color: #333333;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -2px;
   margin-bottom: 15px; }
 
 .services__description {
-  color: #333333;
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 16px; }
@@ -60,13 +57,12 @@
       -ms-flex-direction: column;
           flex-direction: column; }
 
-.services__item__title {
+.services__item-title {
   font-size: 24px;
   line-height: 32px;
-  color: #333;
   margin-bottom: 18px; }
 
-.services__item__description {
+.services__item-description {
   font-size: 16px;
   line-height: 32px;
   color: rgba(51, 51, 51, 0.5);
@@ -74,15 +70,14 @@
 
 .services__item {
   font-size: 16px;
-  line-height: 32px;
-  color: #333; }
+  line-height: 32px; }
   .services__item:hover, .services__item:active, .services__item:focus {
     color: rgba(51, 51, 51, 0.5); }
 
 .services__list__item {
   margin-bottom: 62px; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .services__flex {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
@@ -102,7 +97,7 @@
     margin-bottom: 29px; }
   .services__description {
     margin-bottom: 29px; }
-  .services__flex__item {
+  .services__flex-item {
     padding-top: 42px;
     width: 470px; }
   .services__list {
