--- a/source/css/price.css
+++ b/source/css/price.css
@@ -70,7 +70,7 @@
     font-size: 56px;
     line-height: 64px; }
 
-.price__package {
+.price__item-package {
   font-size: 20px;
   line-height: 32px;
   text-align: right;
@@ -88,7 +88,7 @@
   vertical-align: center;
   font-size: 14px;
   color: #1D46F6;
-  width: 75%;
+  width: 70%;
   padding: 15px;
   text-transform: uppercase;
   font-weight: bold;
@@ -103,13 +103,15 @@
 .price--hidden {
   display: none; }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .price {
     width: 1170px;
     margin: 0 auto;
     margin-bottom: 170px; }
   .price__small {
     text-align: center; }
+  .price__list__button {
+    width: 75%; }
   .price__title {
     margin: 0 auto;
     width: 700px;
@@ -141,5 +143,5 @@
   .price--hidden {
     display: none; }
   .price__list__item {
-    width: 300px;
+    width: 320px;
     margin: 0; } }
