--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -1,10 +1,12 @@
+@import "variables.scss";
+
 .footer-wrapper{
-	background-color: #210C38;
+	background-color: $bg-color;
 
 }
 .page-footer{
 	padding-top: 74px;
-	width: 375px;
+	width: $mobile-width;
 	margin: 0 auto;
 	padding-right: 5px;
 	padding-left: 5px;
@@ -137,7 +139,7 @@
 
 
 
-@media(min-width: 1200px){
+@media(min-width: $screen-dekstop){
 	.page-footer{
 		width: 1170px;
 		margin: 0 auto;
