--- a/source/sass/news.scss
+++ b/source/sass/news.scss
@@ -1,3 +1,4 @@
+ @import "variables.scss";
  .news{
  	margin-bottom: 159px;
  }
@@ -11,12 +12,14 @@
 	font-weight: 400;
 	margin-bottom: 16px;
 }
+.news__item-wrapper{
+	padding: 24px;
+}
 
 .news__newsletter{
 	margin-bottom: 89px;
 }
 .news__title{
-	color: #333333;
 	font-size: 40px;
 	line-height: 48px;
 	letter-spacing: -1px;
@@ -35,7 +38,8 @@
 	width: 270px;
 	border-radius: 10px;
 	background-color: #F3F6FA;
-	padding-bottom: 22px;
+
+
 	margin-bottom: 32px;
 	img{
 		margin-bottom: 26px;
@@ -47,35 +51,28 @@
 }
 
 .news__date{
-	color: #333;
 	opacity: 0.5;
 	font-size: 16px;
 	line-height: 32px;
-	padding-left: 24px;
 }
 
 .news__item{
-	color: #333;
 	font-size: 20px;
 	line-height: 32px;
-	padding-left: 24px;
 }
-.news__item__categories{
-	padding-left: 24px;
+.news__item-categories{
 	font-size: 16px;
 	line-height: 32px;
 
 }
 
-.news__newsletter__title{
+.news__newsletter-title{
 	font-size: 20px;
 	line-height: 32px;
 	font-weight: 400;
-	color: #333;
 }
 
-.news__newsletter__description{
-	color: #333;
+.news__newsletter-description{
 	font-size: 16px;
 	line-height: 32px;
 	opacity: 0.5;
@@ -100,12 +97,12 @@
 
 
 .news__newsletter__button{
-	width: 123px;
+	width: 100px;
 	height: 48px;
 	background-color: #1D46F6;
 	text-transform: uppercase;
 	border-radius: 7px;
-
+	border: 0;
 	font-size: 14px;
 	font-weight: bold;
 	color: #fff;
@@ -113,23 +110,22 @@
 	&:hover,
 	&:focus,
 	&:active{
-		border-color: rgba(29, 70, 246, 0.5);
-		background-color: white;
-		color: #1D46F6;
+		
+		outline: 0;
+		background-color: rgba(29, 70, 246, 0.8);
+		color: white;
 		cursor: pointer;
 	}
 }
 
-.news__definition__title{
+.news__definition-title{
 	font-size: 20px;
 	line-height: 32px;
 	font-weight: 400;
-	color: #333;
 	margin-bottom: 17px;
 }
 
-.news__definition__description{
-	color: #333;
+.news__definition-description{
 	font-size: 16px;
 	line-height: 32px;
 	opacity: 0.5;
@@ -140,7 +136,7 @@
 	margin: 0;
 }
 
-@media(min-width: 1200px){
+@media(min-width: $screen-dekstop){
 	.news{
 		width: 1170px;
 		margin: 0 auto;
@@ -188,5 +184,4 @@
 		padding: 0;
 		
 	}
-
 } 
