--- a/source/sass/price.scss
+++ b/source/sass/price.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .price{
 	margin-bottom: 154px;
 }
@@ -100,7 +102,7 @@
 	}
 }
 
-.price__package{
+.price__item-package{
 	font-size: 20px;
 	line-height: 32px;
 	
@@ -123,7 +125,7 @@
 	font-size: 14px;
 	color: #1D46F6;
 
-	width: 75%;
+	width: 70%;
 	padding: 15px;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -144,7 +146,7 @@
 		display: none;
 	}
 
-@media(min-width: 1200px){
+@media(min-width: $screen-dekstop){
 	.price{
 		width: 1170px;
 		margin: 0 auto;
@@ -155,6 +157,9 @@
 		text-align: center;
 	}
 
+	.price__list__button{
+		width: 75%;
+	}
 	.price__title{
 		margin: 0 auto;
 		width: 700px;
@@ -185,7 +190,7 @@
 	}
 
 	.price__list__item{
-		width: 300px;
+		width: 320px;
 		margin: 0;
 
 	}
