--- a/source/sass/recommendation.scss
+++ b/source/sass/recommendation.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 .recommendation{
 	margin-bottom: 120px;
 
@@ -15,13 +16,11 @@
 
 .recommendation__picture{
 
-	width: 329px;
+	width: 100%;
 	height: 212px;
-	margin: 0 auto;
 }
 
 .recommendation__title{
-	color: #333333;
 	font-size: 40px;
 	line-height: 48px;
 	letter-spacing: -1px;
@@ -31,7 +30,6 @@
 
 
 .recommendation__quote{
-	color: #333;
 	margin: 0;
 	margin-top: 38px;
 	font-size: 20px;
@@ -41,7 +39,7 @@
 .recommendation__author{
 	font-size: 16px;
 	line-height: 32px;
-	color: #333;
+	
 	font-style: inherit;
 	display: inline-block;
 	margin-top: 10px;
@@ -50,7 +48,6 @@
 .recommendation__post{
 	font-size: 16px;       
 	line-height: 32px;
-	color: #333;
 	font-style: inherit;
 	opacity: 0.5;
 	display: inline-block;
@@ -103,7 +100,6 @@
 
 	.recommendation__flex__item{
 		width: 329px;
-		height: 320px;
 	}
 	.slide{
 		display: none;
@@ -136,7 +132,11 @@
 		}
 	}
 
-@media(min-width: 1200px){
+.recommendation__quote{
+	height: 300px;
+}
+
+@media(min-width: $screen-dekstop){
 	.recommendation{
 		width: 1170px;
 		margin-bottom: 160px;
@@ -146,7 +146,6 @@
 		margin-bottom: 18px;
 	}
 	.recommendation__title{
-	color: #333333;
 	font-size: 56px;
 	line-height: 64px;
 	letter-spacing: -2px;
@@ -178,7 +177,7 @@
 		order: 1;
 		
 	}
-	.recommendation__flex__item{
+	.recommendation__flex-item{
 		width: 470px;
 		margin-left: 30px;
 	}
@@ -197,6 +196,7 @@
 
 	.recommendation__quote{
 		margin-bottom: 30px;
+		height: auto;
 	}
 	.recommendation__picture{
 
