--- a/source/sass/stats.scss
+++ b/source/sass/stats.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 .stats{
 
 	margin-bottom: 160px;
@@ -5,12 +6,12 @@
 
 }
 .stats__picture{
- 	width: 329px;
- 	margin: 0 auto;
+ 	width: 100%;
 	margin-bottom: 27px;
 }
 
 .stats__small{
+	margin-top: 27px;
 	color: #ED3A4E;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -21,7 +22,6 @@
 }
 
 .stats__title{
-	color: #333333;
 	font-size: 40px;
 	line-height: 48px;
 	letter-spacing: -2px;
@@ -29,7 +29,6 @@
 }
 
 .stats__description{
-	color: #333333;
 	font-size: 20px;
 	line-height: 32px;
 	margin-bottom: 16px;
@@ -60,11 +59,10 @@
 
 .stats__list{
 	display: flex;
-	color: #333;
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
-.stats__item__digit{
+.stats__item-digit{
 	font-size: 40px;
 	line-height: 48px;
 	letter-spacing: -1px;
@@ -76,7 +74,7 @@
 	width: 160px;
 }
 
-@media(min-width: 1200px){
+@media(min-width: $screen-dekstop){
 
 	.stats{
 		width: 1170px;
@@ -86,7 +84,8 @@
 		justify-content: space-between;
 	}
 
-	.stats__flex__item{
+	.stats__flex-item{
+
 		padding-top: 42px;
 		width: 470px;
 
