--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -1,3 +1,7 @@
+
+
+
+
 @import "header.scss";
 @import "features.scss";
 @import "services.scss";
@@ -28,11 +32,10 @@ h1,h2,h3{
 
 
 body{
-		/*background: url("bgm.jpg") no-repeat 50% 0;*/
 		font-family: 'Trispace', sans-serif;
 		margin: 0;
 		padding: 0;
-		color: #333;
+		color: $color;
 		
 	}
 
