--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -113,7 +113,7 @@
 		flex-wrap: wrap;
 	}
 
-.footer__flex__copyright{
+.footer__flex-copyright{
 	display: flex; 
 	justify-content: space-around;
 
